OnboardingV2Minimal/force-app/main/default/objects/Typeform_Responses__c/Typeform_Responses__c.object-meta.xml
<CustomObject>
    <label>Typeform Response</label>
    <nameField>
        <displayFormat>RESPONSE-{0000}</displayFormat>
        <label>Typeform Responses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Typeform Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>