OnboardingV2Minimal/force-app/main/default/objects/Typeform_Responses__c/fields/Additional_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Additional_Phone_Number__c</fullName>
    <inlineHelpText>Do you have an additional phone number we can use on the day of installation?</inlineHelpText>
    <label>Additional Phone Number?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>