OnboardingV2Minimal/force-app/main/default/objects/Typeform_Responses__c/fields/Appliance_Scheduled_For_Installation__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Scheduled_For_Installation__c</fullName>
    <inlineHelpText>Which appliance(s) are scheduled for installation with us?</inlineHelpText>
    <label>Appliance(s) Scheduled for Installation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>