OnboardingV2Minimal/force-app/main/default/objects/Typeform_Responses__c/fields/Are_water_and_power_fully_functional__c.field-meta.xml
<CustomField>
    <fullName>Are_water_and_power_fully_functional__c</fullName>
    <inlineHelpText>Are water and power fully functional in the installation area?</inlineHelpText>
    <label>Are Water and Power Fully Functional ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>