OnboardingV2Minimal/force-app/main/default/objects/Typeform_Responses__c/fields/Is_the_installation_area_free__c.field-meta.xml
<CustomField>
    <fullName>Is_the_installation_area_free__c</fullName>
    <inlineHelpText>Is the installation area free from ongoing construction or remodeling?</inlineHelpText>
    <label>Is The Installation Area Free?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>