OnboardingV2Minimal/force-app/main/default/objects/Typeform_Responses__c/fields/Service_Appointment_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_ID__c</fullName>
    <label>Service Appointment ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>