OnboardingV2Minimal/force-app/main/default/objects/Typeform_Responses__c/fields/State_Region_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Region_Province__c</fullName>
    <label>State/Region/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>