OnboardingV2Minimal/force-app/main/default/objects/Typeform_Responses__c/fields/Work_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Id__c</fullName>
    <label>Work Order Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>