OnboardingV2Minimal/force-app/main/default/objects/Typeform_Responses__c/fields/Zip_Post_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Post_Code__c</fullName>
    <label>Zip/Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>